--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,32 @@ div.left{
 div.right{
    float: right;
 }
+header{
+   background-color: #4d4d4d;
+   padding: 10px 0;
+}
+.mobile{
+   display: none;
+}
+.desktop{
+   float: right;
+
+}
+nav.desktop ul{
+   float: right;
+   text-decoration: none;
+   list-style-type: none;
+   
+
+}
+nav.desktop li{
+   display: inline-block;
+   padding: 0 2rem;
+}
+nav.desktop a{
+   color:white;
+   text-decoration: none;
+}
+h1.desktop{
+   color: white;
+}
