--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,56 @@ nav.desktop a{
 h1.desktop{
    color: white;
 }
+.banner-principal{
+   width: 100%;
+   height: 600px;
+   background-image: url("../images/background.jpg");
+   background-size: cover;
+   position: relative;
+}
+.overlay{
+   position: absolute;
+   left: 0;
+   top: 0;
+   z-index: 1;
+   width: 100%;
+   height: 100%;
+   background-color:rgba(0, 0, 0, 0.2);
+}
+section.banner-principal form{
+   width: 100%;
+   max-width: 600px;
+   position: absolute;
+   z-index: 2;
+   left: 50%;
+   top: 50%;
+   transform:translate(-50%,-50%) ;
+   -ms-transform:translate(-50%,-50%) ;
+}
+section.banner-principal form h2{
+   color: white;
+   font-size:30px;
+   text-align: center;
+   font-weight: 500;
+}
+section.banner-principal form input[type=email]{
+   width: 100%;
+   height:66px;
+   background-color: white;
+   color:black;
+   font-size: 22px;
+   padding-left: 10px;
+   margin-top: 10px;
+}
+section.banner-principal form input[type=submit]{
+   width: 100%;
+   height:66px;
+   background-color: #4d4d4d;
+   color:black;
+   font-size: 22px;
+   padding-left: 10px;
+   margin-top: 10px;
+   color: white;
+   border: none;
+   
+}
