--- a/estilo/style.css
+++ b/estilo/style.css
@@ -85,7 +85,7 @@ img{
 
 header{
 	padding:20px 0;
-	background:  #008080;
+	background:  #56136C;
 }
 
 header .logo{
@@ -186,7 +186,7 @@ section.banner-container form input[type=submit]{
 	width: 100%;
 	height: 66px;
 	margin-top:10px;
-	background: #00C59E;
+	background: #56136C;
 	color: white;
 	cursor: pointer;
 	font-size: 22px;
@@ -229,7 +229,7 @@ section.especialidades h2.title{
 }
 
 .box-especialidade h3{
-	color: #008080;
+	color: #56136C;
 	font-size: 40px;
 }
 
@@ -247,7 +247,7 @@ section.especialidades h2.title{
 
 section.extras{
 	padding: 30px 0;
-	background: #008080;
+	background: #56136C;
 }
 
 .servicos-container,.depoimentos-container{
@@ -292,7 +292,7 @@ p.nome-autor{
 }
 
 footer{
-	background: #008080;
+	background: #56136C;
 	padding: 30px 0;
 }
 
@@ -309,9 +309,7 @@ footer p{
 	font-size: 16px;
 }
 
-/*
-Para arrumar scroll-x do IE e EDGE.
-*/
+
 
 body{
 	overflow-x: hidden;
@@ -384,7 +382,7 @@ section.erro-404 a{
 }
 
 .contato-container input[type=submit]{
-	background: #00C59E;
+	background: #CE33FF;
 	width: 140px;
 	height: 40px;
 	color: white;
